2020-12-24  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/render.c (AffineEdge): Use MagickDoubleToLong();

	* magick/utility.c (MagickDoubleToLong): New private function to
	convert a 'double' to a 'long' with the minimum amount of harm.

	* magick/segment.c (Classify): Remove variables from function
	global scope that don't need outer scope.

	* coders/jp2.c: JasPer changed its jas_stream_ops_t callback
	interfaces in releases 2.0.19 and 2.0.20.  Revert to providing the
	older interfaces by default, but use a
	MAGICK_JP2_NEW_STREAM_INTERFACE pre-processor definition to
	support selecting the new interfaces.  We don't know how to
	usefully tell the JasPer version at compile time!  Luckily, using
	the older interfaces only causes a compiler warning rather than a
	run-time issue.

	* coders/mac.c (ReadMACImage): Use size_t type for 'ldblk' to
	avoid possible overflow.

2020-12-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* NEWS.txt: Update the news to the date December 23, 2020.

2020-12-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/image.c (AllocateImage): Satisfy conditions for
	DestroyImage() as soon as possible and use it for clean-up on
	error.  Added more error checks.
	(CloneImage): Satisfy conditions for DestroyImage() as soon as
	possible and use it for clean-up on error.  Don't attempt to copy
	colormap if colors is zero.  Added more error checks.
	(DestroyImage): Assure that we can destroy a partially-constructed
	Image.

	* magick/effect.c (BlurImage): Fix null pointer dereference if
	image failed to be created.
	(DespeckleImage): Fix null pointer dereference if image failed to
	be created.
	(EnhanceImage): Fix null pointer dereference if image failed to be
	created.
	(GaussianBlurImage): Fix null pointer dereference if image failed
	to be created.
	(MedianFilterImage): Fix null pointer dereference if image failed
	to be created.
	(MotionBlurImage): Fix null pointer dereference if image failed to
	be created.