@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020201224"
-#define public MagickPackageReleaseDate "snapshot-20201224"
+#define public MagickPackageVersionAddendum ".020201225"
+#define public MagickPackageReleaseDate "snapshot-20201225"
