@@ -35,6 +35,16 @@
 <div class="document">
 
 
+<p>2020-12-25  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
+<blockquote>
+<ul class="simple">
+<li>coders/miff.c (ReadMIFFImage): Arbitrarily limit the number of
+header keywords to avoid DOS attempts.</li>
+<li>coders/mpc.c (ReadMPCImage): Arbitrarily limit the number of
+header keywords to avoid DOS attempts.  Fixes oss-fuzz 28956
+&quot;Timeout - coder_MPC_fuzzer&quot;.</li>
+</ul>
+</blockquote>
 <p>2020-12-24  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
